--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GFS - Consultoria Estratégica para Negócios de Alimentação</title>
+    <title>OFIR - Consultoria Estratégica para Negócios de Alimentação</title>
 
     <!-- Fonte Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,6 +22,7 @@
           extend: {
             fontFamily: {
               sans: ["Inter", "sans-serif"],
+              display: ['"GWBantley"', 'Inter', 'sans-serif'],
             },
             colors: {
               brand: {
@@ -57,6 +58,14 @@
     </script>
 
     <style>
+        @font-face {
+    font-family: 'GWBantley';
+    src: url('/assets/fonts/GWBantley-Regular-Trial.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
       :root {
         --bg-body: #050505;
         --text-main: #ffffff;
@@ -132,14 +141,14 @@
         <h1
           class="text-4xl lg:text-7xl font-bold tracking-tight mb-8 leading-tight drop-shadow-lg"
         >
-          A receita certa para negócios de <br class="hidden lg:block" />
-          <span class="text-brand">alimentação lucrativos.</span>
+          A receita que falta no<br class="hidden lg:block" />
+          <span class="text-brand">SEU MARKETING.</span>
         </h1>
 
         <p
           class="text-lg lg:text-2xl text-gray-300 mb-10 max-w-3xl mx-auto leading-relaxed drop-shadow-md font-light"
         >
-          A GFS é uma consultoria estratégica especializada em restaurantes,
+          A OFIR é uma consultoria estratégica especializada em restaurantes,
           churrascarias, hamburguerias, pizzarias e outros negócios de
           alimentação que querem crescer com
           <span class="text-white font-medium">salão cheio</span>,
@@ -204,7 +213,7 @@
           Negócios de alimentação que já confiaram na nossa receita
         </h3>
         <p class="text-gray-500 text-xs md:text-sm">
-          Algumas marcas que já passaram pela GFS.
+          Algumas marcas que já passaram pela OFIR.
         </p>
       </div>
 
@@ -328,7 +337,7 @@
           </h2>
           <p class="text-gray-400 text-lg">
             Alguns exemplos de negócios de alimentação que destravaram
-            crescimento com a GFS.
+            crescimento com a OFIR.
           </p>
         </div>
 
@@ -362,7 +371,7 @@
               <p class="text-gray-400 text-sm leading-relaxed">
                 Uma churrascaria com movimento concentrado apenas em sábado e
                 domingo vivia de promoções que espremiam a margem. Com a Receita
-                GFS, organizamos cardápio e posicionamento para trazer o cliente
+                OFIR, organizamos cardápio e posicionamento para trazer o cliente
                 certo ao longo da semana.
               </p>
             </div>
@@ -395,7 +404,7 @@
               </h3>
               <p class="text-gray-400 text-sm leading-relaxed">
                 Uma hamburgueria com presença forte nas redes sociais, mas pouco
-                retorno em vendas. Com a GFS, definimos produtos âncora e uma
+                retorno em vendas. Com a OFIR, definimos produtos âncora e uma
                 rotina de comunicação para atrair e reter o cliente ideal.
                 Aumento no ticket médio.
               </p>
@@ -543,20 +552,20 @@
     </section>
 
     <!-- ==========================================
-         SEÇÃO 4 – O QUE É A GFS
+         SEÇÃO 4 – O QUE É A OFIR
     ========================================== -->
     <section class="py-20 bg-dark-950">
       <div
         class="container mx-auto px-6 lg:px-12 max-w-6xl grid md:grid-cols-2 gap-16 items-center"
       >
         <div class="reveal">
-          <h2 class="text-3xl font-bold mb-2">O que é a GFS</h2>
+          <h2 class="text-3xl font-bold mb-2">Quem somos nós</h2>
           <h3 class="text-2xl text-brand mb-8 font-light">
             Consultoria estratégica criada para negócios de alimentação.
           </h3>
 
           <p class="text-gray-300 mb-8 leading-relaxed text-lg">
-            A GFS é uma consultoria especializada em negócios de alimentação.
+            A OFIR é uma consultoria especializada em negócios de alimentação.
             Nós conectamos cozinha, salão, números e marketing para construir
             uma receita de crescimento própria para o seu restaurante,
             churrascaria, hamburgueria, pizzaria ou bar.
@@ -626,7 +635,7 @@
           </ul>
         </div>
 
-        <!-- Imagem O que é GFS (Visual Reset) -->
+        <!-- Imagem O que é OFIR (Visual Reset) -->
         <div class="relative reveal delay-200">
           <div
             class="relative rounded-2xl overflow-hidden shadow-2xl border border-white/10"
@@ -703,13 +712,13 @@
     </div>
 
     <!-- ==========================================
-         SEÇÃO 5 – A RECEITA GFS (TIMELINE)
+         SEÇÃO 5 – A RECEITA OFIR (TIMELINE)
     ========================================== -->
     <section class="py-20 bg-dark-900 relative">
       <div class="container mx-auto px-6 lg:px-12 max-w-6xl relative z-10">
         <div class="text-center mb-16 reveal">
           <h2 class="text-3xl lg:text-4xl font-bold mb-4">
-            A Receita GFS para o seu negócio
+            A Receita OFIR para o seu negócio
           </h2>
           <p class="text-gray-400 max-w-2xl mx-auto">
             Em vez de mais tarefas soltas, um modo de preparo claro para
@@ -747,7 +756,7 @@
               <!-- flex-grow para ocupar espaço -->
               <span
                 class="text-brand font-bold text-sm tracking-wider uppercase mb-2 block"
-                >Etapa 01</span
+                >CORTE</span
               >
               <h3 class="text-lg font-bold text-white mb-3">
                 Escolha dos ingredientes
@@ -783,9 +792,9 @@
               <!-- flex-grow para ocupar espaço -->
               <span
                 class="text-brand font-bold text-sm tracking-wider uppercase mb-2 block"
-                >Etapa 02</span
+                >TEMPERO</span
               >
-              <h3 class="text-lg font-bold text-white mb-3">Mise en place</h3>
+              <h3 class="text-lg font-bold text-white mb-3">Organização da cozinha</h3>
               <p class="text-sm text-gray-400 leading-relaxed">
                 Definimos metas, posicionamento, prioridades de crescimento e
                 foco nos produtos certos.
@@ -823,7 +832,7 @@
               <!-- flex-grow para ocupar espaço -->
               <span
                 class="text-brand font-bold text-sm tracking-wider uppercase mb-2 block"
-                >Etapa 03</span
+                >BRASA</span
               >
               <h3 class="text-lg font-bold text-white mb-3">Fogo na cozinha</h3>
               <p class="text-sm text-gray-400 leading-relaxed">
@@ -857,7 +866,7 @@
               <!-- flex-grow para ocupar espaço -->
               <span
                 class="text-brand font-bold text-sm tracking-wider uppercase mb-2 block"
-                >Etapa 04</span
+                >PONTO CERTO</span
               >
               <h3 class="text-lg font-bold text-white mb-3">
                 Degustação e ajustes
@@ -890,19 +899,19 @@
 
     <!-- WRAPPER DO VÍDEO -->
     <div
-      id="gfs-video-wrapper"
+      id="OFIR-video-wrapper"
       class="relative w-full aspect-video rounded-2xl overflow-hidden shadow-2xl border border-dark-700"
     >
       <!-- THUMB CUSTOM (ANTES DO CLIQUE) -->
       <button
-        id="gfs-video-thumb"
+        id="OFIR-video-thumb"
         type="button"
         class="relative w-full h-full group"
       >
         <!-- Imagem de fundo: thumbnail do próprio vídeo -->
         <img
           src="https://img.youtube.com/vi/bpOSxM0rNPM/hqdefault.jpg"
-          alt="Vídeo GFS"
+          alt="Vídeo OFIR"
           class="absolute inset-0 w-full h-full object-cover opacity-70 group-hover:opacity-50 group-hover:scale-105 transition-all duration-700"
         >
 
@@ -934,7 +943,7 @@
         <div class="text-center mb-16 reveal">
           <h2 class="text-3xl font-bold mb-4">Para quem é essa receita</h2>
           <p class="text-gray-400">
-            A GFS é para quem leva o negócio de alimentação a sério.
+            A OFIR é para quem leva o negócio de alimentação a sério.
           </p>
         </div>
 
@@ -1053,7 +1062,7 @@
             <div
               class="text-gray-400 px-6 pb-6 text-sm leading-relaxed border-t border-dark-800 pt-4"
             >
-              Sim. A GFS pode complementar o trabalho da sua agência com uma
+              Sim. A OFIR pode complementar o trabalho da sua agência com uma
               visão estratégica do negócio: números, menu, posicionamento e
               plano de crescimento.
             </div>
@@ -1082,7 +1091,7 @@
             <div
               class="text-gray-400 px-6 pb-6 text-sm leading-relaxed border-t border-dark-800 pt-4"
             >
-              Não. O tráfego pode ser uma ferramenta, mas a GFS começa pelo
+              Não. O tráfego pode ser uma ferramenta, mas a OFIR começa pelo
               negócio: números, cardápio, operação e posicionamento.
             </div>
           </details>
@@ -1163,14 +1172,14 @@
           >
             <img
               src="https://images.unsplash.com/photo-1583394838336-acd977736f90?q=80&w=1968&auto=format&fit=crop"
-              alt="Consultor GFS"
+              alt="Consultor OFIR"
               class="w-full h-full object-cover"
             />
           </div>
 
           <div class="text-left">
             <p class="text-gray-300 leading-relaxed mb-4 text-lg">
-              "A GFS nasce da união entre estratégia, operação e marketing
+              "A OFIR nasce da união entre estratégia, operação e marketing
               voltados para negócios de alimentação. Nosso time já viveu a
               rotina de cozinhas cheias, salões movimentados e planilhas
               apertadas."
@@ -1231,7 +1240,7 @@
         <div
           class="mt-20 pt-8 border-t border-dark-800/50 text-xs text-gray-600 flex justify-center gap-4"
         >
-          <span>&copy; 2025 GFS Consultoria</span>
+          <span>&copy; 2025 OFIR Consultoria</span>
           <span>•</span>
           <span>Todos os direitos reservados</span>
         </div>
@@ -1265,8 +1274,8 @@
   // ============================
   // VÍDEO: TROCAR THUMB POR IFRAME
   // ============================
-  const videoWrapper = document.getElementById('gfs-video-wrapper');
-  const videoThumb   = document.getElementById('gfs-video-thumb');
+  const videoWrapper = document.getElementById('OFIR-video-wrapper');
+  const videoThumb   = document.getElementById('OFIR-video-thumb');
 
   if (videoWrapper && videoThumb) {
     videoThumb.addEventListener('click', () => {
@@ -1275,10 +1284,10 @@
 
       // cria o iframe do YouTube
       const iframe = document.createElement('iframe');
-      iframe.id = 'gfs-video-iframe';
+      iframe.id = 'OFIR-video-iframe';
       iframe.className = 'absolute inset-0 w-full h-full';
       iframe.src = 'https://www.youtube.com/embed/bpOSxM0rNPM?autoplay=1&controls=0&rel=0&modestbranding=1';
-      iframe.title = 'Vídeo apresentação GFS';
+      iframe.title = 'Vídeo apresentação OFIR';
       iframe.frameBorder = '0';
       iframe.allow =
         'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share';
